2009-11-22  Chris Morley

	* data/element.txt, data/svgformat.script, include/openbabel/depict,
	include/openbabel/depict/depict.h, include/openbabel/depict/painter.h,
	include/openbabel/depict/svgpainter.h, src/depict/depict.cpp,
	src/depict/svgpainter.cpp, src/formats/svgformat.cpp: new files
	Add tweaked versions of Tim's OBDepiction and OBPainter classes with
	a new SVGPainter class using no external libraries. SVGFormat displays
	multiple molecules in a table, designed to be viewed in Firefox.

2009-11-21  Chris Morley

	* include/openbabel/alias.h, src/alias.cpp: extensively revised.
	Expanded aliases on 2D or 3D molecules have coordinates generated
	by builder. (Nitro group not quite right.) Can revert to alias form for
	output and display. Can also generate an alias form from normal molecule;
	not sure how useful this is. 
	 
	* data/superatom.txt: changed format; now also stores a right-connected
	form and color.
	
	* src/formats/mdlformat.cpp: add option for output in alias form.	
	Output extra zeros in atom and bond blocks, as pointed out by Ernst-Georg
	Schmidt bug #2897107, and CharlieZhu.
	
	* src/format/gulpformat.cpp: replaced the 'uint' by 'unsigned'.
	'uint' doesn't compile on Visual C++.

2009-11-20  Chris Morley
	
	* include/openbabel/obmolecformat.h, src/obmolecformat.cpp:
	When sent an OBReaction object, outputs the molecules, as requested
	by Charlie Zhu

2009-11-20  Chris Morley

    * include/openbabel/reaction.h: includes for std::tr1::shared_ptr modified.
      In <memory> for VC2008 SP11 and GCC 4.3 but in <tr1/memory> for earlier GCC    
	
	* src/dlhandler_win32.cpp: add another way of getting Module Handle for
	  CMake build.
	  
	* include/openbabel/alias.h: replace OBAPI by OBCOMMON.
      Goes in a different DLL in OBF build.
    
    * Added project files for VC9 with the original OBF Windows build.
      (windows-vc2008 is for the CMake build.) 
      
2009-11-20  Chris Morley
	